@@ -40,6 +40,7 @@ Version 1.1.9 work in progress
 - Enh: CFileCache::get() does now suppress a possible PHP error which might occur on concurrent requests (Y!!)
 - Enh: jquery.yiiactiveform.js added check for form visibility to validate() to prevent JS error when using CActiveForm with jQuery dialog (mdomba)
 - Enh: removed the check for ajax call in CErrorHandler::handleException() (mdomba)
+- Enh: CAssetManager now generates different hash for files/directories with different mtime (Sam Dark)
 - Enh: Yii error screen will now display proper message like error/warning/notice (mdomba)
 
 Version 1.1.8 June 26, 2011
